# hack_seneca

./: README.md  pyproject.toml
frontend/: package-lock.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/analytics/: page.tsx
frontend/app/coach/: page.tsx
frontend/app/nutrition/: page.tsx
frontend/app/onboarding/: page.tsx
frontend/app/profile/: page.tsx
frontend/app/trainer/: page.tsx
frontend/app/workouts/: page.tsx
frontend/components/: ai-coach-avatar.tsx  animated-exercise-card.tsx  chat-message.tsx  coach-suggestions.tsx  exercise-analyzer.tsx  exercise-library.tsx  fitness-charts.tsx  food-logger.tsx  meal-planner.tsx  nutrition-charts.tsx  nutrition-insights.tsx  onboarding-flow.tsx  pose-detector.tsx  progress-ring.tsx  progress-rings.tsx  sidebar.tsx  streak-tracker.tsx  voice-recorder.tsx  workout-builder.tsx  workout-card.tsx  workout-heatmap.tsx
frontend/styles/: globals.css
src/hack_seneca/: api_server.py  api_server_backup.py  api_server_simple.py  crew.py  main.py  main_old.py
src/hack_seneca/config/: agents.yaml  tasks.yaml
src/hack_seneca/tools/: custom_tool.py
users_data/: fitness-activities.json  fitness-measurements.json  fitness-nutrition.json  fitness-users.json
