[project]
name = "hack_seneca"
version = "0.1.0"
description = "hack-seneca using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.186.1,<1.0.0"
]

[project.scripts]
hack_seneca = "hack_seneca.main:run"
run_crew = "hack_seneca.main:run"
train = "hack_seneca.main:train"
replay = "hack_seneca.main:replay"
test = "hack_seneca.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
